sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:5: error: not found: value auMoinsUnEchange
  while(ecart > 1 || auMoinsUnEchange)
                     ^AlgCombSort:7: error: value auMoinsUnEchange is not a member of object Boolean
    Boolean auMoinsUnEchange = 0
            ^AlgCombSort:16: error: not found: value auMoinsUnEchange
        auMoinsUnEchange = 1
        ^